kubernetes/nginx-gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx-gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
